<resources>
    <string name="app_name">SuitCore</string>


    <string name="txt_fragment_test">This is fragment sample</string>
    <string name="txt_empty_member">No member found</string>
    <string name="txt_empty_member_content">There is no member to view</string>

    <!-- Twitter -->

    <!-- Google -->
    <string name="google_default_web_client_id">898401888087-tpqokrn96nico2irun0glt2fodeq0ui6.apps.googleusercontent.com</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1879532772347939</string>
    <string name="fb_login_protocol_scheme">fb1879532772347939</string>
    <string name="facebook_request_field">id,name,email,gender,birthday,picture,cover</string>

    <!-- Error API -->
    <string name="txt_error_connection">The internet connection appears to be offline</string>
    <string name="txt_error_unauthorized">Unauthorised User</string>
    <string name="txt_error_forbidden">Forbidden</string>
    <string name="txt_error_internal_error">Internal Server Error</string>
    <string name="txt_error_bad_request">Bad Request</string>
    <string name="txt_error_no_internet_connection">No Internet Connection</string>
    <string name="txt_error_custom">Something Went Wrong API is not responding properly!</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_error_no_internet">No Internet Connection</string>
    <string name="txt_button_fb_login">LOGIN FACEBOOK</string>
    <string name="txt_button_twitter_login">LOGIN TWITTER</string>
    <string name="txt_button_google_login">LOGIN GOOGLE</string>
    <string name="txt_show_fragment">Show Fragment</string>
    <string name="txt_toolbar_search">Search</string>
    <string name="txt_hint_input_name">Search Location</string>

    <string name="txt_title">Title</string>
    <string name="txt_menu_one">Members</string>
    <string name="txt_menu_two">Dialog</string>
    <string name="txt_menu_three">Map</string>
    <string name="txt_menu_login_sample">Login Sample</string>
    <string name="txt_skip_to_tab_menu">SKIP TO TAB MENU</string>
    <string name="txt_skip_to_side_menu">SKIP TO SIDE MENU</string>
    <string name="txt_button_login">Login</string>
    <string name="txt_toolbar_home">Home</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_image_pop">Image Pop</string>
    <string name="txt_new_confirm_image">Confirm Image</string>
    <string name="txt_new_confirmation">Confirmation</string>
    <string name="txt_new_alert_image">Alert Image</string>
    <string name="txt_new_alert">Alert</string>
    <string name="txt_loading">Loading…</string>
    <string name="txt_loading_with_info">Press back to dismiss</string>

    <!-- In-App Updates -->
    <string name="txt_update_completed">An update has just been downloaded.</string>
    <string name="txt_button_restart">RESTART</string>
    <string name="txt_change_language">Change Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
