<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_38sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/relButton1"
            style="@style/ClickableView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <LinearLayout
                tools:ignore="UselessParent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imgMenu1"
                        tools:ignore="ContentDescription"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@color/colorPrimary"
                        android:scaleType="centerInside" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvMenu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/res_roboto_regular"
                    android:text="@string/txt_menu_one"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_main_menu" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relButton2"
            style="@style/ClickableView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <LinearLayout
                tools:ignore="UselessParent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imgMenu2"
                        tools:ignore="ContentDescription"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@color/gray"
                        android:scaleType="centerInside" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvMenu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/res_roboto_regular"
                    android:text="@string/txt_menu_two"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_main_menu" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relButton3"
            style="@style/ClickableView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <LinearLayout
                tools:ignore="UselessParent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imgMenu3"
                        tools:ignore="ContentDescription"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@color/gray"
                        android:scaleType="centerInside" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvMenu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/res_roboto_regular"
                    android:text="@string/txt_menu_three"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_main_menu" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relButton4"
            style="@style/ClickableView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <LinearLayout
                tools:ignore="UselessParent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imgMenu4"
                        tools:ignore="ContentDescription"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@color/gray"
                        android:scaleType="centerInside" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvMenu4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/res_roboto_regular"
                    android:text="@string/txt_menu_login_sample"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_main_menu" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>